# DexterTools

./: README.md  enable_dhcp.sh  enable_static_ip.sh  install-tools.sh  read_sysmon.sh
archive/: README.md  enable_dhcp.sh  install-gpsdo.sh  read_sysmon.sh
archive/gpsd/: info.txt  install-gpsd.sh  uninstall-gpsd.sh
archive/ntp/: .gitignore  build-ntp.sh  dhclient.conf  install-ntp.sh  ntp.conf  uninstall-ntp.sh
archive/ntp/ntp-packages/: ntp-dbgsym_4.2.8p12+dfsg-4_armhf.deb  ntp_4.2.8p12+dfsg-4_armhf.deb  sntp-dbgsym_4.2.8p12+dfsg-4_armhf.deb  sntp_4.2.8p12+dfsg-4_armhf.deb
archive/ntp/testing/: test-pps.sh
firmware-update/: .gitignore  Cargo.toml  build.sh  firmware-update-filelist.txt  firmware-update-rc.py
firmware-update/.cargo/: config.toml
firmware-update/src/: banks.rs  main.rs  ubootenv.rs
gpsd/: gpsd  install-gpsd.sh
gpsdo/: .gitignore  gpsdo.service  gpsdo.sh  install-gpsdo.sh
ntp/: install-ntp.sh  ntp.conf
ntp/ntp-packages/: ntp-doc_4.2.8p12+dfsg-4_all.deb  ntpdate-dbgsym_4.2.8p12+dfsg-4_armhf.deb  ntpdate_4.2.8p12+dfsg-4_armhf.deb
ntp/testing/: ntp-query.sh  test-gpsd-ntp.sh
