[package]
name = "firmware-update"
version = "0.1.0"
edition = "2021"
authors = [ "Matthias P. Braendli <matthias.braendli@mpb.li>" ]
license = "GPL-3.0-only"
license-file = "COPYING"

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
regex = "1.10"
tar = "0.4"
ureq = { version = "2.9", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-mount = "3"
zmq = "0.10"
zstd = "0.13"
